--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src",
-    "git": "git commit"
+    "lint": "eslint src"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
